src/web/css/main.css
@font-face {
    font-family: 'Poppins';
    font-weight: 900;
    src: url('/assets/fonts/Poppins/Poppins-Black.ttf');
}

@font-face {
    font-family: 'Poppins';
    font-weight: 400;
    src: url('/assets/fonts/Poppins/Poppins-Regular.ttf');
}

@font-face {
    font-family: 'Poppins';
    font-weight: 700;
    src: url('/assets/fonts/Poppins/Poppins-Bold.ttf');
}


body {
    min-width: 100vw;
    min-height: 100vh;
    margin: 0;
    padding: 0;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

.flex-row {
    display: flex;
    flex-direction: row;
}

.flex {
    display: flex;
}

.flex.center {
    align-items: center;
    justify-content: center;
}

.container-height {
    height: 100%;
}

.absolute {
    position: absolute;
}

#albums-view {
    height: 100dvh;
}

#albums-container {
    padding: 0.5cm;
    box-sizing: border-box;
    gap: 1cm;
    flex-wrap: wrap;
    overflow-y: scroll;
    height: calc(100% - max(10%, 2cm));
}

/* The container for the Create Album button */
#albums-view > div:last-child {
    height: 10%;
    max-height: 2cm;
    width: 100%;
}

.album {
    height: 7cm;
    width: 7cm;
    box-sizing: border-box;
    padding: 0.2cm;
    text-align: center;
}

.album > img, .album > .album-blank-preview {
    height: 90%;
    width: 100%;
    border-radius: 0.15cm 0.15cm 0 0;
    user-select: none;
}

.album > .album-blank-preview {
   background-color: #f0f0f0;
}

.album > .info {
    display: flex;
    margin-top: 0.2cm;
    flex-direction: row;
    width: 100%;
}

.album:hover > .info > button {
    display: block;
}

.album > .info > a {
    border: none;
    background-color: transparent;
    font-family: 'Poppins';
    font-weight: 700;
    font-size: 1em;
    color: black;
    text-decoration: none;
    width: calc(100% - 0.6cm);
    text-align: left;
}

.album > .info > a:hover {
    color: #FFA62F;
}

.album > .info > button {
    display: none;
    background-color: transparent;
    border: none;
}

.album > .info > button:focus {
    outline: none;
}

.album > .info > button:hover, 
.album > .info > button:active {
    background-color: #d6d6d6;
    border-radius: 50%;
}

.album > .info > button > img {
    height: 0.6cm;
    width: 0.6cm;
}

#create-album-prompt {
    z-index: 1;
    left: 50%;
    top: 50%;
    transform: translateX(-50%) translateY(-70%);
    padding: 1cm;
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    max-height: 6.5cm;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 0.3cm;
    background-color: white;
}

#create-album-prompt > h2 {
    font-family: 'Poppins';
    font-size: 1.9em;
    margin: 0 0 0.3cm 0;
    color: #5e5e5e;
}

#create-album-prompt > input[type="text"] {
    width: 100%;
    font-family: Arial, sans-serif;
    font-size: 1.2em;
    padding: 0.2cm 0.4cm;
    border: solid 0.02rem #9e9e9e;
    margin-bottom: 0.5cm;
}

#create-album-prompt > input[type="text"]:focus {
    outline: none;
}

#create-album-prompt button {
    font-family: 'Poppins';
    font-weight: 900;
    font-size: 1.2em;
    margin: 0 0.2cm;
    padding: 0.2cm 0.4cm;
    background-color: transparent;
    border: solid 0.01rem #757575;
    color: #757575;
}

#create-album-prompt button:focus {
    border-color: black;
    color: black;
}

#create-album-prompt > #warning-prompt {
    background-color: #e3005b;
    font-family: 'Poppins', 'Arial', sans-serif;
    color: white;
    width: 100%;
    text-align: center;
    margin-top: 0.5cm;
    padding: 0.3cm 0.6cm;
    box-sizing: border-box;
}

#album-view {
    height: 100dvh;
    width: 100dvw;
    box-sizing: border-box;
    padding: 0.2cm 0.5cm;
}

#album-view-navigation-bar {
    height: 10%;
    max-height: 1cm;
    width: 100%;
}

/* The container for the back button */       /* An empty space at the last of the nav bar */
#album-view-navigation-bar > div:first-child, #album-view-navigation-bar > div:last-child    {
    width: 10%;
}

/* The Album Name */
#album-view-navigation-bar > div:nth-child(2) {
    font-family: 'Poppins';
    font-weight: 700;
    font-size: 1.2em;
    width: 80%;
}

/* The icon for the back button in the navbar */
#album-view-navigation-bar > div:first-child > a > img {
    height: 1cm;
    width: 1cm;
}

#album-view-photos-container {
    --image-dimension: calc(calc(100vw - 2cm) / 8);
    height: 100%;
    box-sizing: border-box;
    display: grid;
    grid-template-columns: repeat(auto-fill, var(--image-dimension));
    grid-template-rows: repeat(auto-fill, var(--image-dimension));
    padding: 0.5cm 0;
    overflow-y: scroll;
}

#album-view-photos-container > img {
    --image-dimension: calc(calc(100vw - 2cm) / 8);
    height: var(--image-dimension);
    width: var(--image-dimension);
    scrollbar-width: 1cm;
    object-fit: cover;
}

#album-view-submit-container {
    height: 10%;
    max-height: 1cm;
    padding: 0.5cm 0;
}

#album-view-current-viewed-photo-container {
    display: flex;
    background-color: rgba(0, 0, 0, 0.1);
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: black;
    z-index: 1;
    position: absolute;
    height: calc(100% - 0.4cm) /* taking account the padding of #album-view */;
    width: calc(100% - 1cm) /* taking account the padding of #album-view */;
}

/* The current image being viewed */
#album-view-current-viewed-photo-container > img {
    height: calc(100% - max(10%, 1cm)); 
    object-fit: contain;
}

/* The navigation bar container for the currently viewed photo */
#album-view-current-viewed-photo-container > div:first-child {
    height: max(10%, 1cm);
    width: 100%;
}

/* The left arrow icon for the container of the currently viewed photo */
#album-view-current-viewed-photo-container > div:first-child > button > img {
    height: 1cm;
    width: 1cm;
}

#album-view-current-viewed-photo-container > div:first-child > div {
    height: 100%;
    width: calc(100% - 2cm);
}

#album-view-current-viewed-photo-container > div:first-child > button:last-child {
    border: none;
}

/* The back button for the container of the currently viewed photo */
#album-view-current-viewed-photo-container > div:first-child > button {
    background: transparent;
}
#album-view-current-viewed-photo-container > div:first-child > button:focus {
    outline: none;
}

.respect-viewport-dimensions {
    height: 100dvh;
    width: 100dvh;
}


/* mobile phone viewport */
@media all and (max-width: 500px) {
    :root {
        --album-column-gap: 0.4cm;
        --album-row-gap: 0.7cm;
        --album-dimension: calc(calc(100vw - calc(0.8cm + var(--album-column-gap))) / 2);
    }
    #albums-container {
        display: grid;
        grid-template-columns: var(--album-dimension) var(--album-dimension);
        grid-template-rows: var(--album-dimension);
        column-gap: var(--album-column-gap);
        row-gap: var(--album-row-gap);
        padding: 0.5cm 0.4cm;
    }
    .album > .album-blank-preview {
        border-radius: 0.1rem;
    }
    #albums-container > .album {
        width: var(--album-dimension);
        height: var(--album-dimension);
        padding: 0;
    }
    #albums-container > .album > a {
        font-size: 1em;
    }
    #album-view-photos-container > img {
        --image-dimension: calc(calc(100vw - 1cm) / 4);
        width: var(--image-dimension);
        height: var(--image-dimension); 
    }
    #album-view-photos-container {
        row-gap: 0;
    }
    #album-view-submit-container {
        height: 1cm;
        padding: 0.3cm 0;
    }
    #album-view-current-viewed-photo-container > img {
        height: 100%;
        width: 100%;
    }
    .album > .info > button {
        display: block;
    }
}

/* tablet viewport */
@media all and (min-width: 501px) and (max-width: 768px) {
    :root {
        --album-column-gap: 0.35cm;
        --album-column-number: 3;
        --total-album-column-gap: calc(var(--album-column-gap) * calc(var(--album-column-number) - 1));
        --albums-view-container-padding: 1cm; /* pertains to the left and right padding combined */
        --album-container-width: calc(100vw - calc(var(--total-album-column-gap) + var(--albums-view-container-padding)));
        --album-dimension: calc(var(--album-container-width) / var(--album-column-number));
    }
    #albums-container {
        display: grid;
        grid-template-columns: var(--album-dimension) var(--album-dimension) var(--album-dimension);
        grid-template-rows: var(--album-dimension);
        column-gap: var(--album-column-gap);
    }
    #albums-container > .album {
        height: var(--album-dimension);
        width: var(--album-dimension);
        padding: 0;
    }
    .album > a {
        font-size: 1em;
    }
    #album-view-photos-container > img {
        --image-dimension: calc(calc(100vw - 1cm) / 6);
        width: var(--image-dimension);
        height: var(--image-dimension);
    }
    .album > .info > button {
        display: block;
    }
}

